lab-3/program/ConfRoomScheduler.g4
grammar ConfRoomScheduler;

prog: stat+ ;

stat: reserve NEWLINE                # reserveStat
    | cancel NEWLINE                 # cancelStat
    | NEWLINE                        # blank
    ;

reserve: 'RESERVAR' ID 'PARA' ID 'PARA' DATE 'DE' TIME 'A' TIME ('DESCRIPCION:' (ID ' ')+)?; 

cancel: 'CANCELAR' ID 'PARA' ID 'PARA' DATE 'DE' TIME 'A' TIME ; 

DATE: DIGIT DIGIT '/' DIGIT DIGIT '/' DIGIT DIGIT DIGIT DIGIT ;
TIME: DIGIT DIGIT ':' DIGIT DIGIT ;
ID  : [a-zA-Z0-9]+ ;
NEWLINE: '\r'? '\n' ;
WS  : [ \t]+ -> skip ;

fragment DIGIT : [0-9] ;
